Refactor job listing API and enhance security config
Refactored the public job listing endpoint to return a pageable list of jobs with company info, using a new repository method and DTO. Added eager fetching of job images, improved CORS and security configuration, introduced a custom access denied handler, and made minor code style and compatibility adjustments. Also updated application properties for security debugging and JWT secret.